adding new words

--- a/web pagge.html
+++ b/web pagge.html
@@ -19,9 +19,9 @@
                         
                         <div class="con"> <li><a href="#">CONTACT</a></li></div>
                         <div class="ii">
-                    <li><a  href="#">NEWS</a></li>
-                    <li><a href="#">PIRCING</a></li>
-                    <li><a href="#">SERVICES</a></li>
+                    <li><a  href="#">home</a></li>
+                    <li><a href="#">wlawla</a></li>
+                    <li><a href="#">lolo</a></li>
                     <li><a href="#">ABOUT</a></li>
                         
                     <li class="new"><a href="#">HOME</a></li>
