--- a/web pagge.html
+++ b/web pagge.html
@@ -20,9 +20,9 @@
                         <div class="con"> <li><a href="#">CONTACT</a></li></div>
                         <div class="ii">
                     <li><a  href="#">home</a></li>
-                    <li><a href="#">wlawla</a></li>
+                    <li><a href="#">bozaa</a></li>
+                    <li><a href="#">hima</a></li>
                     <li><a href="#">lolo</a></li>
-                    <li><a href="#">ABOUT</a></li>
                         
                     <li class="new"><a href="#">HOME</a></li>
                             </div> 
